<resources>
    <string name="app_name">Calculator</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="point">.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="plus_minus">+/-</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="equals">=</string>
    <string name="delete">\u232b</string>
    <string name="clear">C</string>
    <string name="lul">lul</string>
    <string name="button_clear_history">Clear History</string>
    <string name="btn_calc_cash">Calculate</string>
</resources>