<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.mge.calculator.activities.CalculatorActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="164dp"
        android:layout_marginBottom="32dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="end|center_vertical"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
		android:textSize="30sp"
        android:typeface="serif"		/>

	<LinearLayout
		android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:orientation="vertical">	
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1">
			<Button
				android:id="@+id/button_clear"
				android:text="@string/clear"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:textSize="30sp"
				style="?android:attr/borderlessButtonStyle"
			/>
			<Button
				android:id="@+id/button_divide"
				android:text="@string/divide"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:textSize="30sp"
				style="?android:attr/borderlessButtonStyle"
				/>
			<Button
				android:id="@+id/button_multiply"
				android:text="@string/multiply"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:textSize="30sp"
				style="?android:attr/borderlessButtonStyle"
				/>
			<Button
				android:id="@+id/button_delete"
				android:text="@string/delete"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:textSize="30sp"
				style="?android:attr/borderlessButtonStyle"
				/>			
		</LinearLayout>
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1">
			<Button
				android:id="@+id/button_7"
				android:text="@string/button_7"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:textSize="30sp"
				style="?android:attr/borderlessButtonStyle"
			/>
			<Button
				android:id="@+id/button_8"
				android:text="@string/button_8"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:textSize="30sp"
				style="?android:attr/borderlessButtonStyle"
			/>
			<Button
				android:id="@+id/button_9"
				android:text="@string/button_9"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:textSize="30sp"
				style="?android:attr/borderlessButtonStyle"
			/>
			<Button
				android:id="@+id/button_minus"
				android:text="@string/minus"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:textSize="30sp"
				style="?android:attr/borderlessButtonStyle"
			/>
		</LinearLayout>
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1">
			<Button
				android:id="@+id/button_4"
				android:text="@string/button_4"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:textSize="30sp"
				style="?android:attr/borderlessButtonStyle"
				/>
			<Button
				android:id="@+id/button_5"
				android:text="@string/button_5"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:textSize="30sp"
				style="?android:attr/borderlessButtonStyle"
				/>
			<Button
				android:id="@+id/button_6"
				android:text="@string/button_6"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:textSize="30sp"
				style="?android:attr/borderlessButtonStyle"
				/>
			<Button
				android:id="@+id/button_plus"
				android:text="@string/plus"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:textSize="30sp"
				style="?android:attr/borderlessButtonStyle"
				/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1">
			<Button
				android:id="@+id/button_1"
				android:text="@string/button_1"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:textSize="30sp"
				style="?android:attr/borderlessButtonStyle"
				/>
			<Button
				android:id="@+id/button_2"
				android:text="@string/button_2"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:textSize="30sp"
				style="?android:attr/borderlessButtonStyle"
				/>
			<Button
				android:id="@+id/button_3"
				android:text="@string/button_3"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:textSize="30sp"
				style="?android:attr/borderlessButtonStyle"
				/>
			<Button
				android:id="@+id/button_equals"
				android:text="@string/equals"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:textSize="30sp"
				style="?android:attr/borderlessButtonStyle"
				/>
		</LinearLayout>
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1">
			<Button
				android:id="@+id/button_pl_mn"
				android:text="@string/plus_minus"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:textSize="30sp"
				style="?android:attr/borderlessButtonStyle"
			/>
			<Button
				android:id="@+id/button_0"
				android:text="@string/button_0"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:textSize="30sp"
				style="?android:attr/borderlessButtonStyle"
			/>
			<Button
				android:id="@+id/button_point"
				android:text="@string/point"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:textSize="30sp"
				style="?android:attr/borderlessButtonStyle"
			/>
		</LinearLayout>
	</LinearLayout>		
</RelativeLayout>